Added pokemon Giphy

--- a/src/index.html
+++ b/src/index.html
@@ -23,17 +23,42 @@
             </div>
             <div class="button-center">
                 <form id="randomPokemon">
-                    <label for="randomPokemon">Search for a random pokemon!</label>
+                    <label for="randomPokemon">Click for a random pokemon!</label>
                     <button type="submit" class="button">Submit</button>
                 </form>
             </div>
             <div class="button-center">
-                    <form id="typePokemon">
-                        <label for="pokemonType">Search for a type pokemon!</label>
-                        <input id="pokemonType" type="text" required></input>
-                        <button type="submit" class="button">Submit</button>
-                    </form>
-                </div>
+                <form id="typePokemon">
+                    <label for="pokemonType">Search for a random pokemon by type!</label>
+                    <select id="pokemonType">
+                        <option value="normal">Normal</option>
+                        <option value="fighting">Fighting</option>
+                        <option value="flying">Flying</option>
+                        <option value="poison">Poison</option>
+                        <option value="ground">Ground</option>
+                        <option value="rock">Rock</option>
+                        <option value="bug">Bug</option>
+                        <option value="ghost">Ghost</option>
+                        <option value="steel">Steel</option>
+                        <option value="fire">Fire</option>
+                        <option value="water">Water</option>
+                        <option value="grass">Grass</option>
+                        <option value="electric">Electric</option>
+                        <option value="psychic">Psychic</option>
+                        <option value="ice">Ice</option>
+                        <option value="dragon">Dragon</option>
+                        <option value="dark">Dark</option>
+                        <option value="fairy">Fairy</option>
+                    </select>
+                    <button type="submit" class="button">Submit</button>
+                </form>
+            </div>
+            <div class="button-center">
+                <form id="pokemonGif">
+                    <label for="pokemonGif">Random Pokemon Gif!</label>
+                    <button type="submit" class="button">Submit</button>
+                </form>
+            </div>
         </div>
         <hr class="mainHR">
         <div id="imgDiv">
